--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "protobufjs": "^7.5.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.4.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
