--- a/package.json
+++ b/package.json
@@ -92,19 +92,22 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@playwright/test": "^1.53.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/node": "20.19.1",
-    "@types/react": "18.3.23",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.28.0",
     "eslint-config-next": "^15.3.3",
     "genkit-cli": "^1.8.0",
+    "globals": "^16.2.0",
     "postcss": "^8",
+    "string-replace-loader": "^3.2.0",
     "tailwindcss": "^3.4.1",
     "typescript": "5.8.3"
   }
