feat: Add comprehensive PWA app icon configuration for iOS/Android
- Fixed manifest.json to use local SVG icons instead of broken Imgur links
- Added comprehensive Apple Touch Icon meta tags for all iOS devices
- Added proper PWA meta tags for Android and mobile optimization
- Created browserconfig.xml for Windows tile support
- Updated theme colors to match LeadFlow brand (teal)
- App will now show proper icon when saved to iPhone/iPad home screen

Icons supported:
- iOS: All device sizes (180x180, 152x152, 120x120, 76x76)
- Android: PWA manifest with 192x192, 512x512 sizes
- Windows: Browser tiles
- Standard favicon for browsers

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,31 +1,45 @@
 {
   "name": "LeadFlow",
   "short_name": "LeadFlow",
-  "description": "Lead history and assignment system",
+  "description": "Lead history and assignment system for sales teams",
   "start_url": "/dashboard",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#3B82F6",
+  "background_color": "#0F1419",
+  "theme_color": "#2DD4BF",
   "orientation": "portrait-primary",
   "scope": "/",
   "lang": "en-US",
+  "categories": ["business", "productivity"],
   "icons": [
     {
-      "src": "https://imgur.com/oujPvCe",
-      "type": "image/png",
-      "sizes": "any"
+      "src": "/app-icon.svg",
+      "type": "image/svg+xml",
+      "sizes": "any",
+      "purpose": "any"
     },
     {
-      "src": "https://imgur.com/oujPvCe",
-      "type": "image/png",
+      "src": "/app-icon.svg",
+      "type": "image/svg+xml", 
       "sizes": "192x192",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
-      "src": "https://imgur.com/oujPvCe",
-      "type": "image/png",
-      "sizes": "512x512",
-      "purpose": "any maskable"
+      "src": "/app-icon.svg",
+      "type": "image/svg+xml",
+      "sizes": "512x512", 
+      "purpose": "any"
+    },
+    {
+      "src": "/app-icon.svg",
+      "type": "image/svg+xml",
+      "sizes": "180x180",
+      "purpose": "any"
+    },
+    {
+      "src": "/app-icon.svg",
+      "type": "image/svg+xml",
+      "sizes": "any",
+      "purpose": "maskable"
     }
   ]
 }
