--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,14 +12,14 @@
   "categories": ["business", "productivity"],
   "icons": [
     {
-      "src": "/icons/leadflow.png",
+      "src": "/app-icon.svg",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/svg+xml"
     },
     {
-      "src": "/icons/leadflow.png",
+      "src": "/app-icon.svg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/svg+xml"
     }
   ]
 }
