--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,6 +12,16 @@
   "categories": ["business", "productivity"],
   "icons": [
     {
+      "src": "/app-icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/app-icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
       "src": "/app-icon.svg",
       "sizes": "192x192",
       "type": "image/svg+xml"
