--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "long": "^5.3.2",
     "lucide-react": "^0.475.0",
     "next": "^15.3.3",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
     "postcss-value-parser": "^4.2.0",
