chore: setup Firebase Hosting with Next.js SSR and GitHub Actions

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,7 @@
 {
   "projects": {
-    ".": "leadflow-4lvrr"
+    ".": "leadflow-4lvrr",
+    "default": "leadflow-4lvrr"
   },
   "targets": {},
   "etags": {}
