--- a/firebase.json
+++ b/firebase.json
@@ -11,25 +11,14 @@
     "rules": "storage.rules"
   },
   "hosting": {
-    "public": ".next",
+    "source": ".",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ],
-    "headers": [
-      {
-        "source": "/service-worker.js",
-        "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "no-cache"
-          }
-        ]
-      }
-    ],
-    "rewrites": [
-      { "source": "**", "destination": "/index.html" }
-    ]
+    "frameworksBackend": {
+      "region": "us-central1"
+    }
   }
 }
