--- a/.env.local
+++ b/.env.local
@@ -11,6 +11,7 @@ NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-KDEF2C21SH
 # To get CSV URL: File → Share → Publish to web → CSV format → Copy link
 # Main closer/sales performance data
 GOOGLE_SHEETS_OVERALL_CSV_URL=https://docs.google.com/spreadsheets/d/e/2PACX-1vS1JbDgrzjZrpCmTLDtv44N3-NMvdc_bf15JvNErW3Qpxaj3DgCQlYfn5cDwZGH3RuD5yIWQm5SV0DN/pub?gid=1888217885&single=true&output=csv
+NEXT_PUBLIC_GOOGLE_SHEETS_OVERALL_CSV_URL=https://docs.google.com/spreadsheets/d/e/2PACX-1vS1JbDgrzjZrpCmTLDtv44N3-NMvdc_bf15JvNErW3Qpxaj3DgCQlYfn5cDwZGH3RuD5yIWQm5SV0DN/pub?gid=1888217885&single=true&output=csv
 
 # Additional data sources (add as needed)
 GOOGLE_SHEETS_DYNASTY_VENDETTA_TEAM_DATA_URL=https://docs.google.com/spreadsheets/d/e/2PACX-1vS1JbDgrzjZrpCmTLDtv44N3-NMvdc_bf15JvNErW3Qpxaj3DgCQlYfn5cDwZGH3RuD5yIWQm5SV0DN/pub?gid=1534484948&single=true&output=csv
