--- a/package.json
+++ b/package.json
@@ -100,11 +100,12 @@
     "@types/node": "20.19.1",
     "@types/react": "19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@typescript-eslint/eslint-plugin": "^8.33.1",
-    "@typescript-eslint/parser": "^8.33.1",
+    "@typescript-eslint/eslint-plugin": "^8.35.0",
+    "@typescript-eslint/parser": "^8.35.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.28.0",
-    "eslint-config-next": "^15.3.3",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.3.4",
+    "eslint-plugin-react": "^7.37.5",
     "genkit-cli": "^1.8.0",
     "globals": "^16.2.0",
     "postcss": "^8",
