--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "yocto-queue": "^1.2.1",
-    "zod": "^3.24.2"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -98,8 +98,9 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/node": "20.19.1",
-    "@types/react": "19.1.8",
+    "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/recharts": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
     "@typescript-eslint/parser": "^8.35.0",
     "autoprefixer": "^10.4.21",
