--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
+    "postcss-logical": "^8.1.0",
     "postcss-value-parser": "^4.2.0",
     "protobufjs": "^7.5.3",
     "react": "^18.3.1",
